<resources>
    <string name="app_name">MultipleChoice</string>
    <string name="questions_place_holder">Your Questions:</string>
    <string name="question_counter">0 / 100</string>
    <string name="prev_button">prev_button</string>
    <string name="next_button">next_button</string>
    <string name="choice_text_string">choice here</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="general_knowledge_quiz">Quiz Time</string>
    <string name="choice_x">Choice</string>
    <string name="score">0 / 50</string>
    <string name="score_string">Your Score:</string>
    <string name="recent_score">Your Most Recent Score</string>
    <string name="top_score">Your Top Score</string>
    <string name="user_guide">User Guide</string>
</resources>
