<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E8D5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="417dp"
        android:layout_height="53dp"
        android:background="#3A3638"
        android:gravity="center"
        android:text="@string/general_knowledge_quiz"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_counter_text_view"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:background="#3A3638"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="362dp"
        android:layout_height="314dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.29">

        <RadioButton
            android:id="@+id/choice_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECA8BF"
            android:padding="10dp"
            android:layout_margin="5sp"
            android:text="@string/choice_x"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/choice_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6D0D7"
            android:padding="10dp"
            android:layout_margin="5sp"
            android:text="@string/choice_x"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/choice_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ECA8BF"
            android:padding="10dp"
            android:layout_margin="5sp"
            android:text="@string/choice_x"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/choice_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6D0D7"
            android:padding="10dp"
            android:layout_margin="5sp"
            android:text="@string/choice_x"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/score_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_string"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score_text_view"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.863" />

    <ImageButton
        android:id="@+id/close_quiz"
        android:layout_width="42dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/question_counter_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view">

        <TextView
            android:id="@+id/questions_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_place_holder"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/top_score_in_game_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score_string"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.831" />

</androidx.constraintlayout.widget.ConstraintLayout>